# pru_simulation_engine

./: Cargo.toml  README.md  index.html
src/: app.rs  main.rs
src/agents/: analysis.rs  astro_agent.rs  events.rs  mod.rs
src/astro/: black_hole.rs  formation.rs  galaxy.rs  mod.rs  star.rs
src/pru/: cell.rs  gravity.rs  gravity_relational.rs  mod.rs  rules.rs  universe.rs
src/render/: camera.rs  mod.rs  visuals.rs
src/ui/: agents_panel.rs  controls.rs  mod.rs
